# nds-api

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_TW.md  GENERAL_JAVA_GUIDE.md  LICENSE  MINECRAFT_DEVELOPER_GUIDE.md  MINECRAFT_DEVELOPER_GUIDE_TW.md  PUBLISH.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_STRATEGY.md  build.gradle  gradle.properties  gradlew.bat  nds_migration_next_gen_vault_replacement_plan_for_minecraft.md  publish.bat  publish.sh  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
Cpp/: CMakeLists.txt  README.md  vcpkg.json
Cpp/src/nds/asset/: asset.pb.cc  asset.pb.h
Cpp/src/nds/audit/: rationale.pb.cc  rationale.pb.h
Cpp/src/nds/common/: common.pb.cc  common.pb.h
Cpp/src/nds/common/v1/: common_v1.pb.cc  common_v1.pb.h
Cpp/src/nds/context/: context.pb.cc  context.pb.h
Cpp/src/nds/event/: event.pb.cc  event.pb.h
Cpp/src/nds/event/v1/: event_v1.pb.cc  event_v1.pb.h
Cpp/src/nds/identity/: identity.pb.cc  identity.pb.h
Cpp/src/nds/identity/v1/: identity_v1.pb.cc  identity_v1.pb.h
Cpp/src/nds/ledger/v1/: ledger.pb.cc  ledger.pb.h
Cpp/src/nds/memory/v1/: memory.pb.cc  memory.pb.h
Cpp/src/nds/metadata/v1/: metadata.pb.cc  metadata.pb.h
Cpp/src/nds/policy/: policy.pb.cc  policy.pb.h
Cpp/src/nds/projection/: projection.pb.cc  projection.pb.h
Cpp/src/nds/query/: query.pb.cc  query.pb.h
Cpp/src/nds/sync/v1/: sync.pb.cc  sync.pb.h
Cpp/src/nds/transaction/: transaction.pb.cc  transaction.pb.h
Go/: README.md  go.mod
Go/nds/asset/: asset.pb.go
Go/nds/audit/: rationale.pb.go
Go/nds/common/: common.pb.go
Go/nds/common/v1/: common_v1.pb.go
Go/nds/context/: context.pb.go
Go/nds/event/: event.pb.go
Go/nds/event/v1/: event_v1.pb.go
Go/nds/identity/: identity.pb.go
Go/nds/identity/v1/: identity_v1.pb.go
Go/nds/ledger/v1/: ledger.pb.go
Go/nds/memory/v1/: memory.pb.go
Go/nds/metadata/v1/: metadata.pb.go
Go/nds/policy/: policy.pb.go
Go/nds/projection/: projection.pb.go
Go/nds/query/: query.pb.go
Go/nds/sync/v1/: sync.pb.go
Go/nds/transaction/: transaction.pb.go
Python/: README.md  pyproject.toml
Ruby/: README.md  noie-nds-api.gemspec
Ruby/lib/: noie_nds_api.rb
Ruby/lib/nds/asset/: asset_pb.rb
Ruby/lib/nds/audit/: rationale_pb.rb
Ruby/lib/nds/common/: common_pb.rb
Ruby/lib/nds/context/: context_pb.rb
Ruby/lib/nds/event/: event_pb.rb
Ruby/lib/nds/identity/: identity_pb.rb
Ruby/lib/nds/policy/: policy_pb.rb
Ruby/lib/nds/projection/: projection_pb.rb
Ruby/lib/noie_nds_api/: version.rb
Rust/: Cargo.toml  README.md
Rust/src/: lib.rs
TypeScript/: README.md  package-lock.json  package.json  tsconfig.json
TypeScript/src/: index.ts
csharp/: Directory.Build.props  Noie.Nds.sln  README.md
csharp/src/Noie.Nds.Api/: Noie.Nds.Api.csproj
csharp/src/Noie.Nds.Api.Abstractions/: Noie.Nds.Api.Abstractions.csproj
csharp/src/Noie.Nds.Api.Proto/: Noie.Nds.Api.Proto.csproj
csharp/src/Noie.Nds.Api.Proto.V3/: Noie.Nds.Api.Proto.V3.csproj
csharp/tests/Noie.Nds.Api.Tests/: IdentityTests.cs  MoneyAdapterTests.cs  Noie.Nds.Api.Tests.csproj  ResultTests.cs  V3AdaptersTests.cs
docs/: CSHARP_SDK.md  JAVA_SDK.md  README.md
java/: README.md  build.gradle
spec/: buf.gen.csharp.yaml  buf.gen.yaml
spec/docs/: PROTOCOL.md  README.md  V3.md  V3_BRIDGE.md
spec/proto/: buf.yaml
src/noiedigitalsystem/api/: NdsRuntime.java
(+200 files in other folders)
